# pdf-translator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPECIFICATION.md  pyproject.toml  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/pdf_translator/: __init__.py  __main__.py  cli.py  config.py  gui.py  logging_config.py  ocr.py  pdf_handler.py  translator.py
tests/: test_cli.py  test_config.py  test_translator_helpers.py
