[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-translator"
version = "0.1.0"
description = "A cross-platform PDF translator using AI with OCR support for scanned documents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "rennerdo30" }
]
keywords = ["pdf", "translator", "ocr", "openai", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "openai>=2.44.0",
    "click>=8.4.2",
    "rich>=15.0.0",
    "Pillow>=12.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "build>=1.5.0",
]

[project.scripts]
pdf-translate = "pdf_translator.cli:main"
pdf-translate-gui = "pdf_translator.gui:main"

[project.urls]
Homepage = "https://github.com/rennerdo30/pdf-translator"
Repository = "https://github.com/rennerdo30/pdf-translator"
Issues = "https://github.com/rennerdo30/pdf-translator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_translator"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/.github",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/SECURITY.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
